--- a/HighlyDeveloped.Web/Views/Home.cshtml
+++ b/HighlyDeveloped.Web/Views/Home.cshtml
@@ -1,5 +1,6 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Home>
 @using ContentModels = Umbraco.Web.PublishedModels;
+@using Umbraco.Core.PropertyEditors.ValueConverters;
 @{
     Layout = "main.cshtml";
 }
@@ -10,17 +11,33 @@
 
 
 @{
-	var latestNews = Umbraco.Content(Guid.Parse("f362853f-060d-46a8-9303-63e75a6bc6a4"))
+    var latestNews = Umbraco.Content(Guid.Parse("f362853f-060d-46a8-9303-63e75a6bc6a4"))
     .ChildrenOfType("newsArticle")
     .Where(x => x.IsVisible())
-    .OrderByDescending(x => x.CreateDate);
+    .OrderByDescending(x => x.CreateDate)
+    .Take(3);
 }
-<ul>
-	@foreach (var item in latestNews)
-	{
-		<li>
-			<a href="@item.Url">@item.Name</a>
-		</li>
-	}
-</ul>
 
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card-deck">
+                @{
+                    foreach (var item in latestNews)
+                    {
+                        var croppedImage = item.Value<ImageCropperValue>("articleImage");
+                        var thumbUrl = croppedImage.Src + croppedImage.GetCropUrl("Thumbnail");
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src=@thumbUrl alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">@item.Name</h5>
+                                <p class="card-text">@item.Value("leadIn")</p>
+                                <a href=@item.Url class="btn btn-primary">Read more</a>
+                            </div>
+                        </div>
+                    }
+                }
+            </div>
+        </div>
+    </div>
+</div>
