--- a/HighlyDeveloped.Web/Views/Partials/CallToAction.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/CallToAction.cshtml
@@ -1,5 +1,8 @@
-@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Web.Models
+@{
+    var homePage = Model.AncestorOrSelf<Home>();
+}
 <section class="bg-light">
     <div class="container">
         <div class="row">
@@ -12,8 +15,7 @@
                     {
                         <a href="@link.Url"
                            target="@link.Target"
-                           class="btn btn-outline-secondary"
-                           >@link.Name</a>
+                           class="btn btn-outline-secondary">@link.Name</a>
                     }
                 }
                 <!-- Button for CTA -->
