--- a/HighlyDeveloped.Web/Views/Partials/LatestNews.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/LatestNews.cshtml
@@ -24,8 +24,8 @@
                                 <h5 class="card-title">@item.Name</h5>
                                 <p class="card-text">@item.Value("leadIn")</p>
                             </div>
-                            <div class="card-footer d-flex justify-content-between">
-                                <div><a href=@item.Url class="btn btn-linkedin">Read more</a></div>
+                            <div class="card-footer d-flex justify-content-between align-items-center">
+                                <div><a href=@item.Url class="btn btn-primary">Read more</a></div>
                                 <div class="social-icons text-muted">
                                     <a href="https://www.facebook.com/sharer.php?u=@item.Url(null, UrlMode.Absolute)" class="ml-2 mr-2">
                                         <i class="fab fa-facebook"></i>
