--- a/HighlyDeveloped.Web/Views/Partials/CallToAction.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/CallToAction.cshtml
@@ -2,8 +2,8 @@
 @using Umbraco.Web.Models
 <section class="bg-light">
     <div class="container">
-        <div class="row">
-            <div class="col text-black py-5">
+        <div class="col">
+            <div class="d-fluid text-black py-5 d-flex flex-column align-items-center">
                 <h1 class="display-4">@Model.Value("calltoActionTitle")</h1>
                 <p class="lead">@Model.Value("calltoActionText")</p>
                 @{
