--- a/HighlyDeveloped.Web/Views/main.cshtml
+++ b/HighlyDeveloped.Web/Views/main.cshtml
@@ -3,12 +3,10 @@
 @{
     Layout = null;
 
-    /**
+    @*
     * Vi använder oss utav Umbraco's egna "Model builder" funktionalitet för att referera till ett klass som har blivit skapad för
     * våran dokument typ.
-    */
-    var homePage = Model.AncestorOrSelf<Home>();
-
+    *@
 }
 <html>
 <head>
@@ -39,13 +37,13 @@
         Html.RequiresJs("https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js", 2, new
         {
             integrity = "sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q",
-            crossorigin = "anonymous",
+            crossorigin = "anonymous"
         });
 
         Html.RequiresJs("https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js", 3, new
         {
             integrity = "sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl",
-            crossorigin = "anonymous",
+            crossorigin = "anonymous"
         });
 
         Html.RequiresJs("/scripts/CookieConsent.js", 4);
@@ -53,22 +51,17 @@
     }
     @Html.RenderCssHere()
 </head>
+@Html.Partial($"NavBar")
 <body>
-    @Html.Partial("NavBar")
-    @RenderBody()
+@RenderBody()
     <div class="alert text-center cookiealert" role="alert">
-        <b>Do you like cookies?</b> &#x1F36A; We use cookies to ensure you get the best experience on our website. <a href="/privacy/" target="_blank">Learn more</a>
-        <button type="button" class="btn btn-primary btn-sm acceptcookies">
-            I agree
-        </button>
-    </div><div class="alert text-center cookiealert" role="alert">
-        <b>Do you like cookies?</b> &#x1F36A; We use cookies to ensure you get the best experience on our website. <a href="/privacy/" target="_blank">Learn more</a>
+        <b>Do you like cookies?</b> &#x1F36A; We use cookies to ensure you get the best experience on our website. <a href="#" target="_blank">Learn more</a>
         <button type="button" class="btn btn-primary btn-sm acceptcookies">
             I agree
         </button>
     </div>
-    @Html.Partial("Footer")
-    @Html.RenderJsHere()
+@Html.Partial("Footer")
+@Html.RenderJsHere()
     <script>
         window.addEventListener("cookieAlertAccept", function () {
             alert("cookies accepted")
