--- a/HighlyDeveloped.Web/Views/Partials/LatestNews.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/LatestNews.cshtml
@@ -1,14 +1,12 @@
-@inherits Umbraco.Web.Mvc.UmbracoViewPage
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<dynamic>
 @using Umbraco.Core.PropertyEditors.ValueConverters;
-
 @{
     var latestNews = Umbraco.Content(Guid.Parse("f362853f-060d-46a8-9303-63e75a6bc6a4"))
-    .ChildrenOfType("newsArticle")
-    .Where(x => x.IsVisible())
-    .OrderByDescending(x => x.CreateDate)
-    .Take(3);
+        .ChildrenOfType("newsArticle")
+        .Where(x => x.IsVisible())
+        .OrderByDescending(x => x.CreateDate)
+        .Take(3);
 }
-
 <div class="container">
     <div class="row">
         <div class="col">
@@ -30,7 +28,6 @@
                                     <a href="https://www.facebook.com/sharer.php?u=@item.Url(null, UrlMode.Absolute)" class="ml-2 mr-2">
                                         <i class="fab fa-facebook"></i>
                                     </a>
-
                                     <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=@item.Url(null, UrlMode.Absolute)" class="ml-2 mr-2">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
