--- a/HighlyDeveloped.Web/Views/ContentPage.cshtml
+++ b/HighlyDeveloped.Web/Views/ContentPage.cshtml
@@ -1,15 +1,27 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContentPage>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-Layout = "main.cshtml";
+	Layout = "main.cshtml";
+	var heroOverlayColour = Model.Value<string>("heroOverlayColour");
 }
+
+@if(!string.IsNullOrEmpty(heroOverlayColour))
+{
+<style>
+	.home-hero > .overlay {
+		background-color: #@heroOverlayColour !important;
+		opacity: 0.70 !important;
+	}
+</style>
+}
+
+@Html.Partial("hero")
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<h1>@Model.Name</h1>
 			@if (Model.HasValue("pageContent"))
 			{
-				@Model.Value("pageContent")
+			@Model.Value("pageContent")
 			}
 		</div>
 	</div>
