--- a/HighlyDeveloped.Web/Views/main.cshtml
+++ b/HighlyDeveloped.Web/Views/main.cshtml
@@ -10,6 +10,7 @@
 }
 <html lang="en">
 <head>
+    <title>Highly Developed</title>
     @{
 
         Html.RequiresCss("https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css", 1, new
