Imported RTE.css

--- a/HighlyDeveloped.Web/Views/main.cshtml
+++ b/HighlyDeveloped.Web/Views/main.cshtml
@@ -27,6 +27,8 @@
         });
 
         Html.RequiresCss("/css/CookieConsent.css", 3);
+        
+        Html.RequiresCss("/css/RTE.css", 4);
 
         Html.RequiresJs("https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js", 1, new
         {
