--- a/HighlyDeveloped.Web/Views/ContentPage.cshtml
+++ b/HighlyDeveloped.Web/Views/ContentPage.cshtml
@@ -16,13 +16,4 @@
 }
 
 @Html.Partial("hero")
-<div class="container">
-	<div class="row">
-		<div class="col">
-			@if (Model.HasValue("pageContent"))
-			{
-			@Model.Value("pageContent")
-			}
-		</div>
-	</div>
-</div>
+@Html.GetGridHtml(Model, "contentGrid")
