--- a/HighlyDeveloped.Web/Views/Partials/LatestNews.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/LatestNews.cshtml
@@ -1,3 +1,4 @@
+@*** Istället för att speca Modell eller Views så säger att det ska vara <dynamic> så kan den renderas i modeller i olika typ *@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<dynamic>
 @using Umbraco.Core.PropertyEditors.ValueConverters;
 @{
