--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -1,5 +1,47 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.NewsArticles>
 @using ContentModels = Umbraco.Web.PublishedModels;
+@using Umbraco.Core.PropertyEditors.ValueConverters;
 @{
-	Layout = null;
+    Layout = "main.cshtml";
+
+    var latestNews = Umbraco.Content(Guid.Parse("f362853f-060d-46a8-9303-63e75a6bc6a4"))
+        .ChildrenOfType("newsArticle")
+        .Where(x => x.IsVisible())
+        .OrderByDescending(x => x.CreateDate);
 }
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card-deck">
+                @{
+                    foreach (var item in latestNews)
+                    {
+                        var croppedImage = item.Value<ImageCropperValue>("articleImage");
+                        var thumbUrl = croppedImage.Src + croppedImage.GetCropUrl("Thumbnail");
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src=@thumbUrl alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">@item.Name</h5>
+                                <p class="card-text">@item.Value("leadIn")</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-between align-items-center">
+                                <div>
+                                    <a href=@item.Url class="btn btn-primary">Read more</a>
+                                </div>
+                                <div class="social-icons text-muted">
+                                    <a href="https://www.facebook.com/sharer.php?u=@item.Url(null, UrlMode.Absolute)" class="ml-2 mr-2">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                    <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=@item.Url(null, UrlMode.Absolute)" class="ml-2 mr-2">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
+            </div>
+        </div>
+    </div>
+</div>
