Render the "Get Latest Tweets" Macro Partials

--- a/HighlyDeveloped.Web/Views/Home.cshtml
+++ b/HighlyDeveloped.Web/Views/Home.cshtml
@@ -7,3 +7,8 @@
 @Html.Partial("Hero");
 @Html.Partial("CallToAction")
 @Html.Partial("LatestNews");
+
+@* Latest Tweets *@
+<div class="container">
+    @Umbraco.RenderMacro("GetLatestTweets", new { twitterHandle = "InstantGamingEN" })
+</div>
