--- a/HighlyDeveloped.Web/Views/Partials/Latest Tweets.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/Latest Tweets.cshtml
@@ -1,2 +1,3 @@
 ﻿@model string
-<h1>Loading the tweets for @Model</h1>
+@*@Model value "InstantGamingEN" is coming from "twitterHandle" from ActionResult GetTweets TwitterController.cs *@
+<h1>Loading the tweets for @Model</h1> @*//InstantGamingEN *@
