Call the action method "RenderContactForm()" in the ContactController.cs

--- a/HighlyDeveloped.Web/Views/MacroPartials/Contact Form.cshtml
+++ b/HighlyDeveloped.Web/Views/MacroPartials/Contact Form.cshtml
@@ -1,4 +1,2 @@
 ﻿@inherits Umbraco.Web.Macros.PartialViewMacroPage
-@{
-    Html.Action("RenderContactFormMethod", "ContactController")
-}
+@Html.Action("RenderContactForm", "Contact")
