--- a/HighlyDeveloped.Web/Views/main.cshtml
+++ b/HighlyDeveloped.Web/Views/main.cshtml
@@ -1,4 +1,5 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿@*Master Page*@
+@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using ClientDependency.Core.Mvc
 @{
     Layout = null;
