--- a/HighlyDeveloped.Web/Views/Partials/Contact Form.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/Contact Form.cshtml
@@ -4,6 +4,15 @@
     Html.EnableClientValidation();
     Html.EnableUnobtrusiveJavaScript();
 }
+<script src="https://www.google.com/recaptcha/api.js?render=@Model.ReCaptchaSiteKey"></script>
+<script>
+    grecaptcha.ready(function () {
+        grecaptcha.execute('@Model.ReCaptchaSiteKey', { action: 'contact_us' })
+            .then(function (token) {
+                $('#GoogleCaptchaToken').val()
+            })
+    });
+</script>
 @if ((string)TempData["status"] == "OK")
 {
     //TODO Show ok message
