Added a reCaptcha input field

--- a/HighlyDeveloped.Web/Views/Partials/Contact Form.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/Contact Form.cshtml
@@ -65,7 +65,7 @@ else
         </div>
 
         //Put the rest of the form elements
-
+        <input type="hidden" name="GoogleCaptchaToken" id="GoogleCaptchaToken"/>
         <div class="form-group">
             <button class="btn btn-outline-primary btn-lg" type="submit">Send</button>
         </div>
