Retrieving token and passed it into ID element #GoogleCaptchaToken

--- a/HighlyDeveloped.Web/Views/Partials/Contact Form.cshtml
+++ b/HighlyDeveloped.Web/Views/Partials/Contact Form.cshtml
@@ -9,7 +9,7 @@
     grecaptcha.ready(function () {
         grecaptcha.execute('@Model.ReCaptchaSiteKey', { action: 'contact_us' })
             .then(function (token) {
-                $('#GoogleCaptchaToken').val()
+                $('#GoogleCaptchaToken').val(token)
             })
     });
 </script>
