--- a/HighlyDeveloped.Web/Views/NewsArticle.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticle.cshtml
@@ -19,4 +19,34 @@
 <br />
 @Model.NewsCategories
 <br /><article class="container">
+    <header class="text-center">
+        <div class="row">
+            <div class="col">
+                <h1 class="title-2 mt-5">@Model.Name</h1>
+                <div class="meta mb-5">
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item">
+                            <i class="fa fa-user"></i> by @Model.Author
+                        </li>
+                        <li class="list-inline-item">
+                            <i class="fa fa-calender"></i>
+                            @Model.PostDate.ToString("dd-MM-yyyy HH:mm")
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p class="lead-in">
+                    @Model.LeadIn
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img src="@imgUrl" class="w-100" alt="" />
+            </div>
+        </div>
+    </header>
 </article>
