Added Content element

--- a/HighlyDeveloped.Web/Views/NewsArticle.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticle.cshtml
@@ -49,6 +49,11 @@
             </div>
         </div>
     </header>
+    <div class="row">
+        <div class="col">
+            <p>@Model.ArticleContent</p>
+        </div>
+    </div>
     <footer class="border d-flex flex-column flex-md-row justify-content-between mt-5 mb-5">
         <div class="d-flex align-item-center px-4">
             <div class="d-flex flex-column">
