--- a/HighlyDeveloped.Web/Views/NewsArticle.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticle.cshtml
@@ -7,18 +7,7 @@
     var imgUrl = imgCropper.Src + imgCropper.GetCropUrl("Main");
     var articleUrl = Model.Url(null, UrlMode.Absolute);
 }
-@Model.Author
-<br />
-@Model.PostDate
-<br />
-@Model.LeadIn
-<br />
-@Model.ArticleImage
-<br />
-@Model.ArticleContent
-<br />
-@Model.NewsCategories
-<br /><article class="container">
+<article class="container">
     <header class="text-center">
         <div class="row">
             <div class="col">
