Added open graph meta attributes

--- a/HighlyDeveloped.Web/Views/NewsArticle.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticle.cshtml
@@ -7,6 +7,12 @@
     var imgUrl = imgCropper.Src + imgCropper.GetCropUrl("Main");
     var articleUrl = Model.Url(null, UrlMode.Absolute);
 }
+@section head {
+    <meta property="og:title" content="@Model.Name" />
+    <meta property="og:description" content="@Model.LeadIn" />
+    <meta property="og:type" content="article" />
+}
+
 <article class="container">
     <header class="text-center">
         <div class="row">
