Updated social media sharing link to correct ones

--- a/HighlyDeveloped.Web/Views/NewsArticle.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticle.cshtml
@@ -62,12 +62,12 @@
                 </a>
             </div>
             <div class="btn--socialsquare btn btn-outline-secondary m-2">
-                <a class="mx-2" href="https://twitter.com/intent/tweet?text=@Model.Name&amp;url=@articleUrl">
+                <a class="mx-2" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=@articleUrl">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <div class="btn--socialsquare btn btn-outline-secondary m-2">
-                <a class="mx-2" href="https://twitter.com/intent/tweet?text=@Model.Name&amp;url=@articleUrl">
+                <a class="mx-2" href="https://www.facebook.com/sharer/sharer.php?u=@articleUrl">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>
