Removed ";" because it was visible in page source

--- a/HighlyDeveloped.Web/Views/main.cshtml
+++ b/HighlyDeveloped.Web/Views/main.cshtml
@@ -56,7 +56,7 @@
     }
     @Html.RenderCssHere()
 
-    @RenderSection("head", false);
+    @RenderSection("head", false)
 </head>
 @if(!Model.Value<bool>("umbracoNaviHide"))
 {
