Retrieveing articles childen and color overlay for hero.

--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -2,4 +2,6 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
     Layout = "main.cshtml";
+    var heroOverlayColour = Model.Value<string>("heroOverlayColour");
+    var articles = Umbraco.ContentAtRoot().DescendantsOrSelfOfType("newsArticles").FirstOrDefault();
 }
