Exception css rule to override the current hero overlay color css

--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -5,3 +5,9 @@
     var heroOverlayColour = Model.Value<string>("heroOverlayColour");
     var articles = Umbraco.ContentAtRoot().DescendantsOrSelfOfType("newsArticles").FirstOrDefault();
 }
+<style>
+	.home-hero > .overlay {
+		background-color: #@heroOverlayColour !important;
+		opacity: 0.70 !important;
+	}
+</style>
