Test iterate and see if the content are really accessible

--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -14,3 +14,11 @@
 
 @Html.Partial("Hero")
 
+@foreach (var article in articles.Children.OrderBy(order => order.Value<DateTime>("postDate")))
+{
+    <ul>
+        <li>
+            @article.Name
+        </li>
+    </ul>
+}
