two rows of column inside a container parent el

--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -22,3 +22,10 @@
         </li>
     </ul>
 }
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 bg-light">Left</div>
+        <div class="col-md-4 bg-light">Right</div>
+    </div>
+</div>
