--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -31,7 +31,21 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 bg-light">Left</div>
-        <div class="col-md-4 bg-light">Right</div>
+        <div class="col-md-8 bg-light p-0">
+            @* Rendering news as card *@
+            <div class="container">
+                <div class="row">
+                    <div class="col p-0">
+                        @* Render card  *@
+
+                    </div>
+                </div>
+            </div>
+            Left
+        </div>
+        <div class="col-md-4 bg-light">
+            @* Render the filer in the sidebar *@
+            Right
+        </div>
     </div>
 </div>
