--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -2,7 +2,12 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @using Umbraco.Core.PropertyEditors.ValueConverters;
 @section head {
-
+    <style>
+        .card-horizontal {
+            display: flex;
+            flex: 1 1 auto;
+        }
+    </style>
 }
 @{
     Layout = "main.cshtml";
