--- a/HighlyDeveloped.Web/Views/NewsArticles.cshtml
+++ b/HighlyDeveloped.Web/Views/NewsArticles.cshtml
@@ -40,13 +40,15 @@
         }
     }
 }
-
-<style>
+@if (!string.IsNullOrEmpty(heroOverlayColour))
+{
+    <style>
 	.home-hero > .overlay {
 		background-color: #@heroOverlayColour !important;
 		opacity: 0.70 !important;
 	}
 </style>
+}
 
 @Html.Partial("Hero")
 
